# libxio

./: .gitignore  CMakeLists.txt  README.md  TODO.md  autogen.sh
examples/: CMakeLists.txt  README.md  echo-server.cpp  filter.cpp  network-splicing.cpp  tcp-client.cpp  xiocp.cpp
include/xio/: Api.h  Buffer.h  BufferStream.h  ChunkedBuffer.h  ChunkedStream.h  DateTime.h  Defines.h  File.h  FileMgr.h  FileStream.h  Filter.h  FilterStream.h  IPAddress.h  InetServer.h  KernelBuffer.h  MemoryBuffer.h  Pipe.h  ServerSocket.h  Socket.h  SocketDriver.h  SocketSpec.h  Stream.h  StreamReader.h  StreamVisitor.h  TimeSpan.h  UnixServer.h
lib/: Buffer.cpp  BufferStream.cpp  CMakeLists.txt  ChunkedBuffer.cpp  ChunkedStream.cpp  DateTime.cpp  File.cpp  FileStream.cpp  Filter.cpp  FilterStream.cpp  IPAddress.cpp  InetServer.cpp  KernelBuffer.cpp  MemoryBuffer.cpp  Pipe.cpp  ServerSocket.cpp  Socket.cpp  SocketDriver.cpp  Stream.cpp  TimeSpan.cpp  UnixServer.cpp
tests/: Buffer-test.cpp  BufferStream-test.cpp  CMakeLists.txt  ChunkedStream-test.cpp  Pipe-test.cpp  cs.cpp
